--- a/agenda/Agenda.html
+++ b/agenda/Agenda.html
@@ -76,9 +76,6 @@
               <button id="Agregar" type="button" class="btn btn-primary">
                 Agregar
               </button>
-              <button id="Ordenar" type="button" class="btn btn-primary">
-                Ordenar
-              </button>
             </form>
           </div>
           <!-- Control de contactos -->
@@ -98,6 +95,15 @@
           <table id="Agenda" class="table">
             <!-- columna -->
             <thead> 
+              <tr>
+              <th> 
+                  <select id = "Tipo" for ="Tipo" >
+                    <option>Tipo de ordenamiento</option> 
+                    <option>Nombre</option>
+                    <option>Edad</option>
+                  </select>
+              </th>
+              </tr>
               <tr>
                 <th>Nombre</th>
                 <th>Correo Electronico</th>
